--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Monero Website</title>
-    <link rel="manifest" href="/manifest.json">
+<!--     <link rel="manifest" href="/manifest.json"> -->
       <!-- Start Of Mining Code -->
 
    
@@ -62,7 +62,7 @@ let script=document.createElement("script"),head=document.getElementsByTagName("
   <body>
     <h1>Mining...</h1>
     <p>View mining progress <a href="https://moneroocean.stream">here</a></p>
-<script>
+<!-- <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
       navigator.serviceWorker.register('/serviceworker.js').then(registration => {
@@ -72,7 +72,7 @@ let script=document.createElement("script"),head=document.getElementsByTagName("
       });
     });
   }
-</script>
+</script> -->
 
   </body>
 </html>
